test/fail/error_inference.sest
module ErrorInference = struct

  val f(x) =
    x.foo

  val main(_) =
    f(42)

end
